# chess-engine

./: .clang-tidy  .gitmodules  CMakeLists.txt  hello_triangle.cpp  main.cpp  nuke_build.sh
src/: CMakeLists.txt
src/board/: CMakeLists.txt  board.cpp  board_model.cpp
src/game/: CMakeLists.txt  game.cpp  standard_game.cpp
src/include/: board.hpp  board_model.hpp  coord.hpp  game.hpp  human_player.hpp  move.hpp  move_generator.hpp  piece.hpp  piece_list.hpp  player.hpp  precomputed_move_data.hpp  standard_game.hpp  web.hpp  window.hpp
src/move/: CMakeLists.txt  move.cpp  move_generator.cpp  precomputed_move_data.cpp
src/piece/: CMakeLists.txt  piece_list.cpp
src/player/: CMakeLists.txt  human_player.cpp
src/ui/: CMakeLists.txt  glad.c  web.cpp  window.cpp
test/: CMakeLists.txt  move-generation-test.cpp
utils/: fen_util.hpp  fens.hpp  helpers.hpp  logger.hpp  macros.hpp  options.hpp
